fix: two-col-overlapping

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -7,15 +7,16 @@
 }
 
 .ds-button-download{
-    @apply w-[250px] py-[10px] px-[50px] justify-center uppercase tracking-[2px] font-medium items-center gap-[10px] border-[1px] rounded-[5px] border-brand-green hover:bg-brand-green hover:text-brand-white duration-500;
+    @apply w-fit py-[10px] px-[50px] uppercase tracking-[2px] font-medium border-[1px] rounded-[5px] border-brand-green
+    hover:bg-brand-green hover:text-brand-white transition ease-in duration-500;
 }
 
 .ds-section--two-col-overlapping{
     background: linear-gradient(
         to bottom,
         white 64px,
-        rgba(88, 89, 67, 0.1) 64px,
-        rgba(88, 89, 67, 0.1) calc(100% - 64px),
+        rgba(88,89,67,0.1)64px,
+        rgba(88,89,67,0.1)calc(100%-64px),
         white 64px
 
     );
